--- a/index.html
+++ b/index.html
@@ -1,10 +1,32 @@
-<html> 
-<head> 
-<meta http-equiv="Content-Language" content="zh-CN"> 
-<meta HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=gb2312"> 
-<title>JD多合一撸羊毛</title> 
-</head> 
-<frameset framespacing="0" border="0" rows="0" frameborder="0"> 
-<frame name="main" src="http://120.25.167.134"crolling="auto" noresize> 
-</frameset> 
+<html>
+<head>
+
+<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
+<title>正在进入</title>
+</head>
+<body>
+<form name=loading> 
+　<p align=center> <font color="#0066ff" size="2">正在进入，请稍等</font><font color="#0066ff" size="2" face="Arial">...</font>
+　　<input type=text name=chart size=46 style="font-family:Arial; font-weight:bolder; color:#0066ff; background-color:#fef4d9; padding:0px; border-style:none;"> 
+　　
+　　<input type=text name=percent size=47 style="color:#0066ff; text-align:center; border-width:medium; border-style:none;"> 
+　　<script>　 
+var bar=0　 
+var line="||"　 
+var amount="||"　 
+count()　 
+function count(){　 
+bar=bar+2　 
+amount =amount + line　 
+document.loading.chart.value=amount　 
+document.loading.percent.value=bar+"%"　 
+if (bar<99)　 
+{setTimeout("count()",100);}　 
+else　 
+{window.location = "120.25.167.134";}　 
+}</script> 
+　</p> 
+</form> 
+<p align="center"> 如果您的浏览器不支持跳转,<a style="text-decoration: none" href="120.25.167.134"><font color="#FF0000">请点这里</font></a>.</p>
+</body>
 </html>
