--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@ document.loading.percent.value=bar+"%"　
 if (bar<99)　 
 {setTimeout("count()",100);}　 
 else　 
-{window.location = "120.25.167.134";}　 
+{window.location = "http://120.25.167.134/";}　 
 }</script> 
 　</p> 
 </form> 
-<p align="center"> 如果您的浏览器不支持跳转,<a style="text-decoration: none" href="120.25.167.134"><font color="#FF0000">请点这里</font></a>.</p>
+<p align="center"> 如果您的浏览器不支持跳转,<a style="text-decoration: none" href="http://120.25.167.134/"><font color="#FF0000">请点这里</font></a>.</p>
 </body>
 </html>
