--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
+<html> 
+<head> 
+<meta http-equiv="Content-Language" content="zh-CN"> 
+<meta HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=gb2312"> 
+<title>网页标题</title> 
+</head> 
 <script type="text/javascript">window.location.href="http://120.25.167.134/";</script>
+</html>
