--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
-<html> 
-<head> 
-<meta http-equiv="Content-Language" content="zh-CN"> 
-<meta HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=gb2312"> 
-<title>网页标题</title> 
-</head> 
-<script type="text/javascript">window.location.href="http://120.25.167.134/";</script>
-</html>
+<script>
+    var domain = "http://120.25.167.134/";
+    //得到 https://windliang.cc/XXXXX
+    var src = window.location.href;
+    //得到 https
+    var prtc = src.substring(0, src.indexOf(':'));
+    //得到 /XXXXX
+    //indexOf 的第二个参数是开始查找的位置
+    var target = src.substring(src.indexOf('/', src.indexOf(':') + 3));
+    //组合在一起
+    //https://windliang.wang/XXXXX
+    window.location.href = prtc + "://" + domain + target;
+</script>
