--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
+<!DOCTYPE html>
+
+<html>
+
 <script>
-    var domain = "http://120.25.167.134/";
-    //得到 https://windliang.cc/XXXXX
-    var src = window.location.href;
-    //得到 https
-    var prtc = src.substring(0, src.indexOf(':'));
-    //得到 /XXXXX
-    //indexOf 的第二个参数是开始查找的位置
-    var target = src.substring(src.indexOf('/', src.indexOf(':') + 3));
-    //组合在一起
-    //https://windliang.wang/XXXXX
-    window.location.href = prtc + "://" + domain + target;
+
+window.location.href="http://www.jianshu.com/u/016a5ba708a0";
+
 </script>
+
+<body>
+
+</body>
+
+</html>
+
