--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
-
-<html>
-
-<script>
-
-window.location.href="http://www.jianshu.com/u/016a5ba708a0";
-
-</script>
-
-<body>
-
-</body>
+<head>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title></title>
+  <meta name="keywords" content=""/>
+  <meta name="description" content=""/>
+</head>
+<frameset framespacing="0" border="0" rows="0" frameborder="0">
+  <frame name="main" src="http://host.vcode.cc:9000" scrolling="auto" noresize>
+</frameset>
+<noframes>
+  <body>
+  抱歉，您的浏览器无法处理框架！<br/>
+  <a href="http://host.vcode.cc:9000" target="_top">点击这里继续访问</a>
+  </body>
+</noframes>
 
 </html>
-
