--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title></title>
   <meta name="keywords" content=""/>
   <meta name="description" content=""/>
+  <title>JD多合一薅羊毛</title> 
 </head>
 <frameset framespacing="0" border="0" rows="0" frameborder="0">
   <frame name="main" src="http://120.25.167.134/" scrolling="auto" noresize>
