--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <noframes>
   <body>
   抱歉，您的浏览器无法处理框架！<br/>
-  <a href="http://120.25.167.134:5701/" target="_top">点击这里继续访问</a>
+  <a href="http://120.25.167.134:5701/#/login" target="_top">点击这里继续访问</a>
   </body>
 </noframes>
 
