--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   <meta name="description" content=""/> 
 </head>
 <frameset framespacing="0" border="0" rows="0" frameborder="0">
-  <frame name="main" src="http://120.25.167.134/" scrolling="auto" noresize>
+  <frame name="main" src="http://120.25.167.134:5701" scrolling="auto" noresize>
 </frameset>
 <noframes>
   <body>
   抱歉，您的浏览器无法处理框架！<br/>
-  <a href="http://120.25.167.134:5701/#/login" target="_top">点击这里继续访问</a>
+  <a href="http://120.25.167.134:5701/" target="_top">点击这里继续访问</a>
   </body>
 </noframes>
 
